Fix side effect with hiding search button (livesearch/detailsearch).
Accidentally the searchButton of the contenttree widget was hidden by the last bern.web 2.0 release.

--- a/plonetheme/onegovbear/theme/scss/search.scss
+++ b/plonetheme/onegovbear/theme/scss/search.scss
@@ -41,7 +41,7 @@ $searchbox-width: 295px;
     }
 
     & input.searchButton {
-      display: none;
+      @include hidden-structure();
     }
 
     & #searchGadget {
@@ -98,7 +98,8 @@ $searchbox-width: 295px;
   }
 }
 
-.searchButton {
+
+#searchform .searchButton {
   @include hidden-structure();
 }
 
